--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -203,14 +203,14 @@
 
 
 body {
-    font-family: "Amazon Ember", "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-family: "Amazon Ember";
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
 }
 
 .remark-slide-content {
-    font-family: "Amazon Ember", "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-family: "Amazon Ember", 'Quattrocento Sans', -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, arial, sans-serif;
     color: white;
     font-style: normal;
     font-weight: normal;
@@ -220,7 +220,7 @@ body {
   .remark-slide-content kbd,
   .remark-slide-content tt,
   .remark-slide-content samp {
-    font-family: "Amazon Ember", "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-family: "Amazon Ember", Monaco, "Lucida Sans Typewriter", "Lucida Console", "Andale Mono", "Consolas", monospace;
     color: white;
     font-style: normal;
     font-weight: normal;
@@ -228,8 +228,21 @@ body {
   .remark-slide-content h1,
   .remark-slide-content h2,
   .remark-slide-content h3 {
-    font-family: "Amazon Ember", "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-family: "Amazon Ember", Quattrocento, "Goudy Old Style", "Big Caslon", Palatino, serif;
     font-style: normal;
     font-weight: bold;
     color: white;
   }
+
+
+  div.my-footer {
+    background-color: #F77A00;
+    display: block;
+    list-style: none;
+    position: absolute;
+    bottom: 12px;
+    height: 30px;
+    margin: 0px;
+    padding: 2px 5px;
+    border-radius: 3px;
+}
