changing sections bg color back to squid ink

--- a/static/css/theme-aws.css
+++ b/static/css/theme-aws.css
@@ -20,7 +20,7 @@
     --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
     --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
     --MENU-SECTION-ACTIVE-CATEGORY-color: #232F3E; /* Color of active category text */
-    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #FF9900; /* Color of background for the active category (only) */
+    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #161E2D; /* Color of background for the active category (only) */
     --MENU-SECTION-ACTIVE-CATEGORY-TEXT-color: #fff; /* Color of pre text when selected */
 
     --MENU-VISITED-color: #527FFF; /* Color of 'page visited' icons in menu */
